# ILNLP

./: README.md
ILNLP/clingo-rs/: Cargo.toml
ILNLP/clingo-rs/tests/ui/: ast_unary_operation.rs
ILNLP/clingo-sys/: build.rs
ILNLP/ilnlp/: Cargo.toml  README.md
ILNLP/ilnlp/src/: asp.rs  main.rs
ILNLP/ilnlp/src/parser/: mod.rs
ilnlp/src/: error.rs  ilasp.rs  lib.rs  main.rs  set.rs  stat.rs
ilnlp/templates/: Graph_Coloring.tpl  Hamilton.tpl  defalut.tpl
