[package]
name = "ilnlp"
version = "0.1.0"
edition = "2024"
description = "Learning Normal Answer Set Program From Input and Output"

[dependencies]
anyhow = "1.0.98"
nom = "8.0.0"
cpu-time = "1.0.0"
clingo = { version = "0.8.0", path = "../clingo-rs",features = ["static-linking"] }
itertools = "0.14.0"
thiserror = "2.0.12"
rayon = "1.10.0"
nom_locate = "5.0.0"
clap = { version = "4.5.41", features = ["derive"] }
tempfile = "3.20.0"
mimalloc = "0.1"
sysinfo = "0.36"
human_bytes = {version = "0.4",features = ["si-units","fast"]}
tera = "1.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
ctrlc = { version = "3.4", features = ["termination"] }

[profile.release]
opt-level = 3
lto = true
strip = true
